Fix navlinks-parent color on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -227,7 +227,7 @@ img {
 }
 @media only screen and (max-width: 767px) {
   .navbar-custom .nav .navlinks-container.show-children {
-    background-color: #eee;
+    background-color: {{ site.navbar-children-col }};
   }
   .navbar-custom .nav .navlinks-container.show-children .navlinks-children {
     display: block;
